# convolution

./: CMakeLists.txt  LICENSE
tests/: Test_Rectangles.cpp
work/intersection/: main.cpp
work/intersection/include/: funny_plot.hpp  pretty_math.hpp
work/intersection/modules/: form.cpp  forms.cpp  funny_plot.cpp  pretty_math.cpp
